--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages (main branch)
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -8,23 +8,15 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: github-pages
-    concurrency:
-      group: deploy
-      cancel-in-progress: true
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-        with:
-          static_distribution: ./  # 部署整个仓库根目录
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: ./  # 上传所有文件作为静态资源
-
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
+          cname: yqh.30515245.xyz
